Fix the contrast on the type of alert text on full page alert banners
Fix #361

Use color: inherit instead of overriding with a value

--- a/modules/localgov_alert_banner_full_page/css/full-page-alert-banner-layout.css
+++ b/modules/localgov_alert_banner_full_page/css/full-page-alert-banner-layout.css
@@ -25,7 +25,7 @@ dialog + .backdrop {
 .localgov-alert-banner-full h1,
 .localgov-alert-banner-full p,
 .localgov-alert-banner-full a {
-	color: #FFFFFF;
+	color: inherit;
 }
 
 .localgov-alert-banner-full > .localgov-alert-banner-full--centered {
